@@ -1,3 +1,8 @@
+Mon Apr 14 06:47:51 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/netxml-ups: don't spam the syslog if we can't connect to
+   the UPS
+
 Tue Apr  8 19:24:46 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/netxml-ups: cleanup the driver a bit
